[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "vsfpng"
description = "fpng for VapourSynth"
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
authors = []
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Mikewando/vsfpng.git"
Issues = "https://github.com/Mikewando/vsfpng/issues"

[tool.meson-python.wheel]
exclude = ["*/*.dll.a"]
