[build-system]
requires = ["meson-python", "VapourSynth>=74"]
build-backend = "mesonpy"

[project]
name = "vsfpng"
description = "fpng for VapourSynth"
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
authors = []
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "VapourSynth>=74",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Mikewando/vsfpng.git"
Issues = "https://github.com/Mikewando/vsfpng/issues"

[tool.meson-python.wheel]
exclude = ["*.lib"]

[tool.cibuildwheel]
build = "cp312-*"
skip = ["cp312-musllinux*", "*-win32"]

[tool.cibuildwheel.config-settings]
setup-args = "-Db_lto=true"

[tool.cibuildwheel.windows.config-settings]
setup-args = ["-Db_lto=true", "-Dprefer_static=true", "-Dcpp_link_args=-static"]

[tool.cibuildwheel.linux]
repair-wheel-command = 'auditwheel repair -w {dest_dir} {wheel} && for w in {dest_dir}/*.whl; do pipx run wheel tags --remove --python-tag py3 --abi-tag none "$w"; done'

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "15" }
repair-wheel-command = 'delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} && for w in {dest_dir}/*.whl; do pipx run wheel tags --remove --python-tag py3 --abi-tag none "$w"; done'

[tool.cibuildwheel.windows]
repair-wheel-command = 'copy "{wheel}" "{dest_dir}\" && for %f in ("{dest_dir}\*.whl") do pipx run wheel tags --remove --python-tag py3 --abi-tag none "%f"'
